--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^4.2.1",
     "react-phone-number-input": "^3.2.19",
     "react-router-dom": "^6.8.1",
+    "ship-components-textinput": "^1.0.1",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
